commented out canvas svg comparison slide (will cover it later if needed after CSS talk)

--- a/template_CanvasCSS.html
+++ b/template_CanvasCSS.html
@@ -437,7 +437,7 @@ function animateCanvas() {
   </slide>
 
   <!-- Canvas SVG comparison -->
-  <slide>
+  <!--<slide>
       <hgroup><h1>Comparison with SVG</h1></hgroup>
       <article>
           <table>
@@ -457,6 +457,7 @@ function animateCanvas() {
           (* not supported <i>natively</i>)
       </article>
   </slide>
+  -->
 
   <!-- Canvas Summary-->
   <slide>
@@ -561,8 +562,8 @@ background-color:#CCCCFF"&gt;
           </div>
 
       <pre class = "prettyprint" data-lang="html">
-&lt;<b>div style="-webkit-transition: -webkit-transform 1s ease-in;"</b>
-onclick="this.style.webkitTransform='rotate(180deg) rotateY(180deg)'"&gt;
+&lt;<b>div style="-webkit-transition: -webkit-transform 1s ease-in;"
+onclick="this.style.webkitTransform='rotate(180deg) rotateY(180deg)'"&gt;</b>
     &lt;p style="font-size:40px">Hello!&lt;/p&gt;
 &lt;/div&gt;
     </pre>
@@ -673,32 +674,7 @@ background-color:#CCCCFF; position: relative; left: 20px; top: 20px; width:200px
       </article>
   </slide>
 
-  <!-- take-home message -->
-  <slide>
-  <hgroup>
-  <h1>Take-aways</h1>
-  </hgroup>
-  <article style="font-size: 150%">
-  <p>Take-aways</p>
-  <ul>
-  <li>"Native-class" applications now possible on the web
-  <li>Graphics applications <i>especially</i> suitable as web apps
-  </ul>
-  <div class="build">
-	<section><p style="font-size: 150%">Questions?</p></section>
-  </div>
-  </article>
-  </slide>
   
-  <!-- CSS Summary-->
-  <slide>
-      <article>
-          <p style="font-size: 150%">Questions?</p>
-          <div style="vertical-align: middle"><img src="images/renderingPipeline.png" width="40%">
-          <img src="images/css_3D.png" width="40%"></div>
-      </article>
-  </slide>
-
 
   <!-- Canvas SVG comparison -->
   <slide>
