small change for slide on optimizing the canvas animation

--- a/template_CanvasCSS.html
+++ b/template_CanvasCSS.html
@@ -421,6 +421,9 @@ var pixels = imageData.data;</b>
       Optimizing Animation
   </h1></hgroup>
       <article>
+	  <div class="build">
+	  <p style="font-size: 150%">setInterval, setTimeout (DO NOT USE!)</p>
+	  <section>
           <p style="font-size: 150%">requestAnimationFrame</p>
           <ul>
               <li>allow the browser to optimize canvas animation</li>
@@ -432,7 +435,8 @@ function animateCanvas() {
 }
       </pre>
           (complete code at http://paulirish.com/2011/requestanimationframe-for-smart-animating/)
-
+		</section>
+		</div>
       </article>
   </slide>
 
